# products-hex

./: .gitignore
.github/: main.yml
code/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  env.example  pyproject.toml
code/app/: README.md  main.py  settings.py
code/app/adapters/driven/db/: mongo.py
code/app/adapters/utils/infrastructure/: error_handling.py  logger_utils.py
code/app/domain/command_handler/: product_handler.py
code/app/domain/commands/: products_comand.py
code/app/domain/ports/: product_repository_port.py
code/app/entrypoint/api/: handler_api.py
code/app/entrypoint/api/model/: api_model.py
code/test/api/: test_api_endpoints.py
code/test/domain/: __init__.py  test_product_handler.py
code/test/integration/: test_mongo_repository.py
